[package]
name = "inv"
version = "0.1.0"
edition = "2021"
description = "Contractor invoice CLI for Australian software contractors"

[[bin]]
name = "inv"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dialoguer = "0.11"
chrono = "0.4"
dirs = "5"
regex = "1"
printpdf = "0.6"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
